--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         channel: 'stable' 
     - run: flutter pub get
-    - run: flutter build aar
+    - run: flutter build apk
     # Analyze our Dart code
     - run: flutter analyze
     # Run our tests
