Update run to "flutter build apk"

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -39,4 +39,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Start release build
-        run: flutter build appbundle
+        run: flutter build apk
