--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -22,7 +22,7 @@ jobs:
         - uses: subosito/flutter-action@v1
           with:
             channel: 'beta' # 'dev', 'alpha', default to: 'stable'
-            flutter-version: '3.7.7' # you can also specify exact version of flutter
+            flutter-version: "3.7.7" # you can also specify exact version of flutter
         # Get flutter dependencies.
         - run: flutter pub get
 
