--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -21,8 +21,9 @@ jobs:
         # Setup the flutter environment.
         - uses: subosito/flutter-action@v2
           with:
-            channel: 'beta' # 'dev', 'alpha', default to: 'stable'
-            flutter-version: "3.7.7" # you can also specify exact version of flutter
+          # 11
+            flutter-version: "3.7.7"
+            channel: 'stable'
         # Get flutter dependencies.
         - run: flutter pub get
 
