--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -2,7 +2,7 @@ name: Flutter CI
 
 # This workflow is triggered on pushes to the main repository.
 
-on: push
+on: [push, pull_request]
 
 jobs:
     build:
@@ -13,8 +13,8 @@ jobs:
       steps:
 
         # Setup Java environment in order to build the Android app.
-        - uses: actions/checkout@v1
-        - uses: actions/setup-java@v1
+        - uses: actions/checkout@v3
+        - uses: actions/setup-java@v3
           with:
             java-version: '12.x'
 
