--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -13,32 +13,38 @@ jobs:
       steps:
 
         # Setup Java environment in order to build the Android app.
-        - uses: actions/checkout@v3
+        - name: Checkout the code
+          uses: actions/checkout@v3
         - uses: actions/setup-java@v3
           with:
             java-version: '12.x'
             distribution: 'zulu'
 
         # Setup the flutter environment.
-        - uses: subosito/flutter-action@v2
+        - name: Install and set flutter version
+          uses: subosito/flutter-action@v2
           with:
           # 11
             flutter-version: "3.7.7"
             channel: 'stable'
         # Get flutter dependencies.
-        - run: flutter pub get
+        - name: Restore packages
+          run: flutter pub get
 
         # Check for any formatting issues in the code.
-        - run: dart format --set-exit-if-changed .
+        # - run: dart format --set-exit-if-changed .
 
         # Statically analyze the Dart code for any errors.
-        - run: flutter analyze .
+        - name: Analyze
+          run: flutter analyze .
 
         # Run widget tests for our flutter project.
-        - run: flutter test
+        - name: Run tests
+          run: flutter test --coverage
 
         # Build apk
-        - run: flutter build apk
+        - name: Build apk
+          run: flutter build apk
         - uses: actions/upload-artifact@v1
           with:
             # Name of the command/step.
