--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -42,6 +42,9 @@ jobs:
         - name: Run tests
           run: flutter test --coverage
 
+        - name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v3
+          
         # Build apk
         - name: Build apk
           run: flutter build apk
