--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -47,10 +47,13 @@ jobs:
           
         # Build apk
         - name: Build apk
-          run: flutter build apk
-        - uses: actions/upload-artifact@v1
+          run: flutter build apk --split-per-abi
+
+        # Upload apk as artifact
+        - name: Upload APK as artifact
+          uses: actions/upload-artifact@v1
           with:
             # Name of the command/step.
-            name: release-apk
+            name: app-release.apk
             # Path to the release apk.
-            path: build/app/outputs/apk/release/app-release.apk
+            path: build/app/outputs/flutter-apk/app-release.apk
