--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,45 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: IndieFlower
+    - family: Nunito
       fonts:
-        - asset: fonts/IndieFlower-Regular.ttf
-          weight: 400 
+        - asset: fonts\Nunito-Italic-VariableFont_wght.ttf
+        - asset: fonts\Nunito-VariableFont_wght.ttf
+        - asset: fonts\Nunito-SemiBoldItalic.ttf   
+          weight: 600 
+        - asset: fonts\Nunito-SemiBold.ttf
+          weight: 600
+        - asset: fonts\Nunito-Regular.ttf
+          weight: 400
+        - asset: fonts\Nunito-MediumItalic.ttf
+          weight: 500
+        - asset: fonts\Nunito-Medium.ttf
+          weight: 500
+        - asset: fonts\Nunito-LightItalic.ttf
+          weight: 300
+        - asset: fonts\Nunito-Light.ttf
+          weight: 300
+        - asset: fonts\Nunito-Italic.ttf
+        - asset: fonts\Nunito-ExtraLightItalic.ttf
+          weight: 200
+        - asset: fonts\Nunito-ExtraLight.ttf
+          weight: 200
+        - asset: fonts\Nunito-ExtraBoldItalic.ttf
+          weight: 800
+        - asset: fonts\Nunito-ExtraBold.ttf
+          weight: 800
+        - asset: fonts\Nunito-BoldItalic.ttf
+          weight: 700
+        - asset: fonts\Nunito-Bold.ttf
+          weight: 700
+        - asset: fonts\Nunito-BlackItalic.ttf
+          weight: 900
+        - asset: fonts\Nunito-Black.ttf
+          weight: 900
+    - family: TitanOne 
+      fonts:
+        - asset: fonts\TitanOne-Regular.ttf
+        
 
   #
   # For details regarding fonts from package dependencies,
