--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -54,6 +54,6 @@ jobs:
           uses: actions/upload-artifact@v1
           with:
             # Name of the command/step.
-            name: app-release.apk
+            name: release-apk
             # Path to the release apk.
-            path: build/app/outputs/flutter-apk/app-release.apk
+            path: build/app/outputs/apk/release/app-release.apkk
