--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -47,7 +47,7 @@ jobs:
           
         # Build apk
         - name: Build apk
-          run: flutter build apk --split-per-abi
+          run: flutter build apk --debug
 
         # Upload apk as artifact
         - name: Upload APK as artifact
