Change yml file back

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -2,10 +2,7 @@ name: Flutter CI
 
 # This workflow is triggered on pushes to the main repository.
 
-on:
-  push:
-    branches:
-    - master
+on: [push, pull_request]
 
 jobs:
     build:
