--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -11,23 +11,55 @@ on:
       - main
 
 jobs:
-  build_apk:
-    name: Build Flutter (Android)
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v2
-      with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v2
-      with:
-          channel: 'dev'
-    - run: flutter pub get
-#     - run: flutter build apk --target-platform android-arm,android-arm64 --split-per-abi
-#     - run: flutter build appbundle --target-platform android-arm,android-arm64
-    - run: flutter build appbundle
-    - name: Upload APK
-      uses: actions/upload-artifact@master
-      with:
-        name: apk-build
-        path: build/app/outputs/apk/release
+    build:
+        # This job will run on ubuntu virtual machine
+      runs-on: ubuntu-latest
+
+      # Within steps define actions we either explicitly write as flutter commands, or ones we get from the marketplace
+      steps:
+
+        # Setup Java environment in order to build the Android app.
+        - name: Checkout the code
+          uses: actions/checkout@v3
+        - uses: actions/setup-java@v3
+          with:
+            java-version: '12.x'
+            distribution: 'zulu'
+
+        # Setup the flutter environment.
+        - name: Install and set flutter version
+          uses: subosito/flutter-action@v3
+          with:
+          # 11
+            flutter-version: "3.7.7"
+            channel: 'stable'
+        # Get flutter dependencies.
+        - name: Restore packages
+          run: flutter pub get
+
+        # Check for any formatting issues in the code.
+        - run: dart format --set-exit-if-changed .
+
+        # Statically analyze the Dart code for any errors.
+        #- name: Analyze
+        #  run: flutter analyze .
+
+        # Run widget tests for our flutter project.
+        - name: Run tests
+          run: flutter test --coverage
+
+        - name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v3
+          
+        # Build apk
+        #- name: Build apk
+        #  run: flutter build apk --debug
+
+        # Upload apk as artifact
+        #- name: Upload APK as artifact
+        #  uses: actions/upload-artifact@v1
+        #  with:
+            # Name of the command/step.
+        #    name: release-apk
+            # Path to the release apk.
+        #    path: build/app/outputs/apk/release/app-release.apkk
