--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -2,13 +2,7 @@ name: Flutter CI
 
 # This workflow is triggered on pushes to the main repository.
 
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
     build:
@@ -28,7 +22,7 @@ jobs:
 
         # Setup the flutter environment.
         - name: Install and set flutter version
-          uses: subosito/flutter-action@v3
+          uses: subosito/flutter-action@v2
           with:
           # 11
             flutter-version: "3.7.7"
