--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,19 @@
-on: push
+on: 
+  push:
+    tags:
+    - '*'
+    
 name: Test, Build and Release apk
 jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
       with:
         java-version: '12.x'
-    - uses: subosito/flutter-action@v1
+    - uses: subosito/flutter-action@v3
       with:
         flutter-version: '3.7.7'
     - run: flutter pub get
