--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/setup-java@v3
       with:
         java-version: '12.x'
+        distribution: 'zulu'
     - uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.7.7'
