--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -49,11 +49,11 @@ jobs:
         - name: Build apk
           run: flutter build apk --debug
 
-         Upload apk as artifact
+        # Upload apk as artifact
         - name: Upload APK as artifact
           uses: actions/upload-artifact@v1
           with:
             # Name of the command/step.
             name: release-apk
             # Path to the release apk.
-            path: build/app/outputs/apk/release/app-release.apkk
+            path: build/app/outputs/apk/release/app-release.apk
